# spider

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE.md  README.md  build.zig  config.hpp  git.cpp  git.hpp  global.cpp  global.hpp  main.cpp  makefile  prompt.cpp  prompt.hpp  spider.cpp  todo.json  utils.cpp  utils.hpp
examples/: config.json  spider.conf
include/: bind.hpp  browser.hpp  config.hpp  debug.hpp  git.hpp  global.hpp  lexer.hpp  loader.hpp  plugin.hpp  prompt.hpp  token.hpp  utils.hpp
include/modules/: browser.hpp  module.hpp
include/plugins/: browser.hpp
plugins/browser/: browser.cpp  browser.hpp  makefile
src/: browser.cpp  browser.zig  config.cpp  config.zig  consts.zig  container.zig  debug.cpp  git.cpp  global.cpp  html.zig  http.zig  lexer.cpp  loader.cpp  logo.zig  main.zig  module.zig  prompt.cpp  prompt.zig  spider.cpp  term.zig  todo.zig  token.cpp  ui.zig  utils.cpp  utils.zig  web.zig
src/modules/: browser.cpp
src/plugins/: browser.cpp
src/resources/: logo.txt  test.html
tools/: fmt  gentokens.py  tidy
